@@ -1,3 +1,7 @@
+2005-03-12  Bruno Haible  <bruno@clisp.org>
+
+	* clisp-link.in (prepare_dynamic_module): Indentation.
+
 2005-03-12  Arseny Slobodyuk  <ampy@users.sourceforge.net>
 
 	* makemake.in (ARGQ1, QQUOT): new variables.
